# AgroBot-Universal-AI-Based-Agricultural-Assistant

./: LICENSE  document.docx
AgroBot Universal AI-Based Agricultural Assistant/: pyproject.toml
AgroBot Universal AI-Based Agricultural Assistant/templates/: about.html  notifications.html
AgroBot Universal AI-Based Agricultural Assistant/templates/admin/: view_user.html
Milestone 2/batch13-agrobot1/templates/: profile.html
Milestone 3/batch13-agrobot1/: app.py  gemini_helper.py
Milestone 3/batch13-agrobot1/data/: agrobot.db
Milestone 3/batch13-agrobot1/static/css/: style.css
Milestone 3/batch13-agrobot1/templates/: base.html
Milestone 4/batch13-agrobot1/data/: agrobot.db
Milestone 4/batch13-agrobot1/static/css/: style.css
Milestone 4/batch13-agrobot1/templates/: contact.html  dashboard.html  home.html
Milestone1/templates/: base.html
